# mcp-audit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.ja.md  README.md  README.zh.md  SPEC.md
.github/workflows/: ci.yml
docs/: sep-draft.md
docs/assets/: demo-output.txt
python/: README.md  pyproject.toml
python/mcp_audit/: __init__.py  exporters.py  logger.py  redact.py  samples.py  trace.py
python/tests/: test_exporters.py  test_logger.py  test_redact.py  test_trace.py  validator.py
schema/: audit-event.schema.json
scripts/: smoke.sh
ts/: README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
ts/examples/: audited-server.mjs  quickstart.mjs
ts/scripts/: copy-schema.mjs  smoke-client.mjs  validate-events.mjs
ts/src/: index.ts  logger.ts  redact.ts  trace.ts  types.ts  withAudit.ts
ts/src/exporters/: console.ts  datadog.ts  http.ts  jsonl.ts  otlp.ts  splunk.ts
ts/tests/: cross-language.test.ts  exporters.test.ts  helpers.ts  readme-snippet.test.ts  redact.test.ts  schema.test.ts  trace.test.ts  withAudit.test.ts
